localisation tweaks, add stats strings

--- a/client/locales/en.json
+++ b/client/locales/en.json
@@ -59,8 +59,8 @@
   "annCreateAnnounce": "Create announcement",
   "annAnnounceDelSuccess": "Announcement deleted successfully",
   "annCouldNotDelAnnounce": "Could not delete announcement",
-  "annUnpin": "unpin",
-  "annPin": "pin",
+  "annUnpin": "Unpin",
+  "annPin": "Pin",
   "annUnpinned": "unpinned",
   "annPinned": "pinned",
   "annLastUpdated": "Last updated",
@@ -168,6 +168,19 @@
   "searchSearchError": "Search error",
   "statYouNotPermission": "You do not have permission to do that.",
   "statTrackerStat": "Tracker statistics",
+  "statActiveTorrents": "Active torrents",
+  "statBannedUsers": "Banned users",
+  "statCompletedDownloads": "Completed downloads",
+  "statFilledRequests": "Filled requests",
+  "statInvitesAccepted": "Invites accepted",
+  "statLeechers": "Leechers",
+  "statPeers": "Peers",
+  "statRegisteredUsers": "Registered users",
+  "statSeeders": "Seeders",
+  "statTotalComments": "Total comments",
+  "statTotalInvitesSent": "Total invites sent",
+  "statTotalRequests": "Total requests",
+  "statUploadedTorrents": "Uploaded torrents",
   "tagTaggedWith": "Tagged with",
   "tokenError": "Token error",
   "torrSeeders": "Seeders",
