preliminary translation for zh.json

--- a/client/locales/zh.json
+++ b/client/locales/zh.json
@@ -1,22 +1,295 @@
 {
-  "poweredBy": "Powered by",
+  "404NotFound": "未找到",
+  "404PageDoesNotExist": "该页面不存在。",
+  "404ReturnHome": "返回首页",
+  "acc2FADisabled": "两步验证已禁用",
+  "acc2FAEnabled": "两步验证已启用",
+  "acc2FAScanQR": "使用身份验证器应用扫描二维码并输入一次性代码",
+  "acc2FAText1": "成功启用两步验证。如果您失去身份验证器应用的访问权限，可以使用这些备用代码登录。请立即保存，它们不再重复出现。",
+  "acc2FAUseApp": "使用身份验证器应用让您的帐户更加安全",
+  "acc2FAuth": "双因素认证",
+  "accBonusPoints": "积分",
+  "accBonusPointsHave": "分",
+  "accBuy": "购买",
+  "accCancel": "取消",
+  "accChangePass": "更改密码",
+  "accClaimed": "状态",
+  "accCopyLink": "复制链接",
+  "accCouldNotBuyItems": "无法购买该物品",
+  "accCouldNotChangePass": "无法更改密码",
+  "accCouldNotDelAcc": "无法删除帐户",
+  "accCouldNotSendInvite": "无法发送邀请",
+  "accCouldNotToggle2FA": "无法切换双因素认证",
+  "accCreated": "已创建",
+  "accCurrentPass": "当前密码",
+  "accDangerZone": "危险区域",
+  "accDelAccText1": "您确定要删除您的帐户吗？此操作无法撤消，您可能无法再次注册。您的个人信息将被删除，但您上传的种子将保留。",
+  "accDeleteMyAcc": "删除我的帐户",
+  "accDeleteMyAccYes": "是的，删除我的帐户",
+  "accDisable": "禁用",
+  "accEnable": "启用",
+  "accEnable2FA": "启用双因素认证",
+  "accEveryRequestYouFulfill": "因为每个被采纳的求种，或者获得",
+  "accForEveryGBYouUpload": "您上传的每 1GB",
+  "accIfYouAreAlsUploaderAcceptTorrent": "分，需要您同时也是被采纳种子的发种人",
+  "accInviteLinkCopiedClipboard": "邀请链接已复制到剪贴板",
+  "accInvites": "邀请",
+  "accInviteSentSuccess": "邀请已成功发送",
+  "accInviteText1": "请输入受邀用户的邮箱地址。受邀用户需使用该邮箱地址注册。您也可以在此直接复制邀请链接。",
+  "accItemsPurchasedSuccess": "购买成功",
+  "accMyAccount": "我的帐户",
+  "accPassChangedSuccess": "密码更改成功",
+  "accPurchaseInvites": "购买邀请",
+  "accPurchaseUpload1GB": "购买上传（1 GB）",
+  "accRole": "角色",
+  "accSendInvite": "发送邀请",
+  "accThisIsAdminAcc": "这是管理员帐户。",
+  "accValidUntil": "有效至",
+  "accYouCurrentlyHave": "现有",
+  "accYouWillEarn": "将获得",
+  "accNotAvailableToBuy": "不可购买",
+  "annPinnedAnnounce": "置顶公告",
+  "annOtherAnnounce": "其他公告",
+  "annAnnounceCreatSuccess": "成功创建公告",
+  "annCouldNotCreateAnnounce": "无法创建公告",
+  "annNewAnnounce": "新公告",
+  "annBody": "内容",
+  "annPinThisAnnounceQ": "置顶此公告？",
+  "annAllowCommentsQ": "允许评论？",
+  "annCreateAnnounce": "创建公告",
+  "annAnnounceDelSuccess": "公告删除成功",
+  "annCouldNotDelAnnounce": "无法删除公告",
+  "annUnpin": "取消置顶",
+  "annPin": "置顶",
+  "annUnpinned": "已取消置顶",
+  "annPinned": "已置顶",
+  "annLastUpdated": "最后更新",
+  "annCommentsDisabled": "评论已禁用。",
+  "annAreYouSureYouWantToDelThisannounceQ": "您确定要删除这个公告吗？此操作无法撤销。",
+  "annAnnounceUpdatedSuccess": "公告更新成功",
+  "annCouldNotUpdateAnnounce": "无法更新公告",
+  "annEditAnnounce": "编辑公告",
+  "annUpdateAnnounce": "更新公告",
+  "bmYourBM": "您的书签",
+  "bmYouNotHaveAnyBM": "您没有任何书签。",
+  "catCategories": "分类",
+  "catNoCategoryHaveBeenDefined": "尚未定义分类。",
+  "catNoTagsHaveBeenDefined": "尚未定义标签。",
+  "catNoResults": "无结果。",
+  "comCommentBy": "评论者",
+  "comDelUser": "已删除的用户",
+  "comOn": "于",
+  "email": "Email",
+  "errSomethingWentWrong": "发生了一些问题",
+  "errTooManyRequests": "请求过于频繁！您已被限制访问。请稍后再试。",
+  "errIfErrorPersist": "如果错误持续存在，请",
+  "errReportIt": "报告它",
+  "errForNow": "目前",
+  "indexLatestAnnounce": "最新公告",
+  "indexLatestTorrents": "最新种子",
+  "indexSearch": "搜索",
+  "indexSearchTorrents": "搜索种子",
+  "indexText1": "您的邮箱地址尚未验证。在验证之前，您将无法上传或下载任何数据。",
+  "indexTime": "YY年M月D日 HH:mm",
+  "listNoItemShow": "没有可显示的条目。",
   "logIn": "登录",
-  "register": "注册",
-  "email": "电子邮箱",
-  "username": "用户名",
-  "usernameRules": "只能由字母、数字和“.”组成",
-  "password": "密码",
-  "totp": "二步验证码",
-  "resetPassword": "忘记密码",
+  "logInFailed": "无法登录",
+  "mdMarkdownPreview": "Markdown 预览",
+  "navAnnouncements": "公告",
+  "navBookmarks": "书签",
+  "navBrowse": "浏览",
+  "navHome": "主页",
+  "navLogOut": "退出登录",
+  "navReports": "报告",
+  "navRequests": "求种",
+  "navRSS": "RSS",
+  "navSearch": "搜索",
+  "navStats": "统计",
+  "navUpload": "发种",
+  "navWiki": "帮助",
   "newPassword": "新密码",
-  "welcomeBack": "欢迎回来",
-  "logInFailed": "登录失败",
-  "welcome": "欢迎",
-  "registerFailed": "注册失败",
-  "registrationClosed": "站点关闭注册",
-  "passwordResetRequestSuccess": "如果有使用该电子邮箱的帐户存在，您将收到一封邮件。",
-  "passwordResetRequestFailed": "无法进行密码重置操作，请确认您的信息填写正确后重试。",
+  "password": "密码",
+  "passwordResetFailed": "无法完成密码重置",
+  "passwordResetRequestFailed": "无法发起密码重置",
+  "passwordResetRequestSuccess": "如果存在该邮箱地址的帐户，将很快收到邮件",
   "passwordResetSuccess": "密码重置成功",
-  "passwordResetFailed": "密码重置失败",
-  "tokenError": "token错误"
+  "poweredBy": "Powered by",
+  "register": "注册",
+  "registerFailed": "无法注册",
+  "registrationClosed": "站点已关闭注册",
+  "reqCreateNew": "求种",
+  "reqCreateReq": "发布请求",
+  "reqTitle": "主题",
+  "reqPostedBy": "求种人",
+  "reqPost": "发布",
+  "reqRequestCreatedSuccess": "求种创建成功",
+  "reqCouldNotCreateReq": "无法创建求种",
+  "reqNewRequest": "新的求种",
+  "reqWhatYouLookForQ": "您在寻找什么？",
+  "reqRequestDelSuccess": "求种删除成功",
+  "reqCouldNotDelReq": "无法删除求种",
+  "reqCommentPostSuccess": "评论成功发布",
+  "reqCommentNotPost": "无法发布评论",
+  "reqSuggestionAddSuccess": "应求已成功添加",
+  "reqSuggestionNotAdded": "无法添加应求",
+  "reqSuggestionAcceptSuccess": "应求已成功采纳",
+  "reqCouldNotAcceptSuggestion": "无法采纳应求",
+  "reqDelete": "删除",
+  "reqSuggestedTorrents": "应求的种子",
+  "reqSuggestATorrent": "应求一个种子",
+  "reqAccepted": "已采纳",
+  "reqAccept": "采纳",
+  "reqNoTorrentsHaveBeenSuggestedYet": "尚未有人应求。",
+  "reqPostAComment": "发布评论",
+  "reqEnterInfohashTorrentBelow": "在下面输入种子的 Infohash。",
+  "reqFulfilled": "已解决",
+  "reqPosted": "已发布",
+  "reqBy": "发布者",
+  "reqInfohash": "Infohash",
+  "reqSuggest": "建议",
+  "repUnresolvedRep": "未解决的报告",
+  "repRepBy": "报告者",
+  "repReason": "原因",
+  "repRepMarkSolved": "报告标记为已解决",
+  "repCouldNotResolveRep": "无法解决报告",
+  "repRepOn": "报告于",
+  "repMarkSolved": "标记为已解决",
+  "repRep": "报告",
+  "repTorrDetail": "种子详情",
+  "resetPassword": "重置密码",
+  "rssThereRSSFeedAt": "在此处有一个 RSS 订阅源",
+  "rssToAuthenticateYourself": "要进行身份验证，您必须提供 Cookie",
+  "rssAnd": "和",
+  "rssToRSSEndpoint": "到 RSS 端点，分别包含您的用户名和密码。",
+  "rssNoQueryParametersAreProvided": "如果没有提供查询参数，RSS 订阅将包含最新的 100 个种子。",
+  "rssOnlyIncludeMatchingResults": "要在订阅中仅包含匹配的结果，您可以添加",
+  "rssQueryParameter": "查询参数，例如",
+  "searchSearchResults": "搜索结果",
+  "searchSearchError": "搜索错误",
+  "statYouNotPermission": "您没有权限执行该操作。",
+  "statTrackerStat": "跟踪器统计",
+  "statActiveTorrents": "活跃种子",
+  "statBannedUsers": "被禁用户",
+  "statCompletedDownloads": "已完成下载",
+  "statFilledRequests": "已填充请求",
+  "statInvitesAccepted": "已接受邀请",
+  "statLeechers": "下载中用户",
+  "statPeers": "Peers",
+  "statRegisteredUsers": "注册用户",
+  "statSeeders": "上传中用户",
+  "statTotalComments": "总评论数",
+  "statTotalInvitesSent": "已发送邀请总数",
+  "statTotalRequests": "总请求数",
+  "statUploadedTorrents": "已上传种子",
+  "tagTaggedWith": "标记为",
+  "tokenError": "令牌错误",
+  "torrSeeders": "上传中用户",
+  "torrLeechers": "下载中用户",
+  "torrDownloads": "下载次数",
+  "torrUploaded": "已上传",
+  "torrTorrEditSuccess": "种子编辑成功",
+  "torrCouldEditTorr": "无法编辑种子",
+  "torrTorrDelSuccess": "种子删除成功",
+  "torrCouldNotDelTorr": "无法删除种子",
+  "torrVoteSubmitSuccess": "投票提交成功",
+  "torrCouldNotSubmitVote": "无法提交投票",
+  "torrReportSubmitSuccess": "报告提交成功",
+  "torrCouldNotSubmitReport": "无法提交报告",
+  "torrFLToggleSuccess": "FREE状态切换成功",
+  "torrCouldNotToggleFL": "无法切换至FREE状态",
+  "torrTorrRemFromGroupSuccess": "成功从组中删除种子",
+  "torrCouldNotRemTorrFromGroup": "无法从组中删除种子",
+  "torrTorrent": "种子",
+  "torrCouldNotBookmarkTorr": "无法收藏种子",
+  "torrFL": "FREE",
+  "torrEdit": "编辑",
+  "torrDownload": "下载",
+  "torrLogInDownload": "登录以下载",
+  "torrFiles": "文件",
+  "torrReport": "报告",
+  "torrRemTorr": "删除此种子",
+  "torrAddTorr": "添加种子",
+  "torrReasonForReport": "报告原因",
+  "torrSureDeleteTorr": "您确定要删除这个种子吗？此操作无法撤销。",
+  "torrFreeleech": "免费下载",
+  "torrUnset": "取消设置",
+  "torrSet": "设置",
+  "torrUploadedBy": "上传者",
+  "torrDate": "日期",
+  "torrSize": "大小",
+  "torrYes": "是",
+  "torrNo": "否",
+  "torrGroupTorr": "已分组的种子",
+  "torrThereAreNoOtherTorrGroup": "此组中没有其他种子。",
+  "totp": "一次性代码",
+  "uploadAddTag": "添加标签",
+  "uploadAnnounceURL": "Tracker地址",
+  "uploadAnonymousUpload": "匿名上传",
+  "uploadCategory": "分类",
+  "uploadCouldNotGetGroupSuggestions": "无法获取组建议",
+  "uploadCouldNotUploadFile": "无法上传文件",
+  "uploadCouldNotUploadTorrent": "无法上传 .torrent",
+  "uploadDescription": "描述",
+  "uploadDragDropClickSelect": "将 .torrent 文件拖放到此处，或单击选择",
+  "uploadDropFileHere": "将文件拖放到此处...",
+  "uploadGroupWith": "与以下种子同组",
+  "uploadGroupWithThisTorrent": "与此种子同组",
+  "uploadInfoBox1": "以下文件扩展名被列入黑名单。包含这些类型文件的种子将无法发布。",
+  "uploadInfoBox2": "看起来与现有的种子有着相似的名称。您是否想要将您的种子分到其中的任意分组？分组应只包含非常相似的内容，例如相同电影的不同格式。",
+  "uploadInfoBox3": "注意：如果您在上传前已开始做种，上传完成后可能需要在您的客户端中强制重新汇报Tracker。",
+  "uploadMarkdownSupport": "支持 Markdown",
+  "uploadMediaInfo": "MediaInfo",
+  "uploadName": "名称",
+  "uploadSource": "来源",
+  "uploadTags": "标签",
+  "uploadTorrentFile": "Torrent 文件",
+  "uploadTorrentUploadSuccess": "Torrent 上传成功",
+  "uploadUpload": "上传",
+  "username": "用户名",
+  "userUser": "用户",
+  "userSuccessfully": "成功",
+  "userCouldNot": "无法",
+  "userProfile": "个人资料",
+  "userUserSince": "用户自",
+  "userUserSinceTime": "YY年M月D日",
+  "userOnlyAdminsSee": "只有管理员能看到此",
+  "userInvitedBy": "邀请者",
+  "userEmailVerified": "邮箱已验证",
+  "userRemainingInvites": "剩余邀请",
+  "userRatio": "分享率",
+  "userDownloaded": "已下载",
+  "userComments": "评论",
+  "userNoComments": "无评论。",
+  "userYouSureWant": "您确定要",
+  "userThisUserQ": "这个用户吗？",
+  "userUploaded": "已上传",
+  "userMyUploads": "我的发种",
+  "usernameRules": "只能包含字母数字和.",
+  "userUnban": "解封",
+  "userBan": "封禁",
+  "userUnbanned": "已解封",
+  "userBanned": "已封禁",
+  "veCouldNotVerifyEmailAddress": "无法验证邮件地址：",
+  "veEmailAddressVerifiedSuccess": "邮箱地址验证成功。",
+  "veNoVerificationTokenProvided": "未提供验证令牌",
+  "veVerifyEmail": "验证电子邮件",
+  "welcome": "欢迎",
+  "welcomeBack": "欢迎回来",
+  "wikiPath": "路径",
+  "wikiPageWillBeVisibleAt": "页面将可见于",
+  "wikiAllowUnregisteredView": "允许未注册用户查看",
+  "wikiPageCreateSuccess": "维基页面创建成功",
+  "wikiCouldNotCreatePage": "无法创建维基页面",
+  "wikiNewPage": "新维基页面",
+  "wikiCreatePage": "创建维基页面",
+  "wikiPageDelSuccess": "维基页面删除成功",
+  "wikiCouldNotDelPage": "无法删除维基页面",
+  "wikiPageUpdateSuccess": "维基页面更新成功",
+  "wikiCouldNotUpdatePage": "无法更新维基页面",
+  "wikiAddPage": "添加页面",
+  "wikiLastEdited": "最后编辑",
+  "wikiPages": "页面",
+  "wikiSaveChanges": "保存更改",
+  "wikiThereNothingHereYet": "目前还没有内容。",
+  "wikiDelThisPageQ": "您确定要删除这个Wiki页面吗？此操作无法撤销。"
 }
