locales: more strings TorrentList (en, ru)

--- a/client/locales/en.json
+++ b/client/locales/en.json
@@ -221,6 +221,9 @@
   "torrNo": "No",
   "torrGroupTorr": "Grouped torrents",
   "torrThereAreNoOtherTorrGroup": "There are no other torrents in this group.",
+  "torrResults": "results",
+  "torrPage": "Page",
+  "torrOf": "of",
   "totp": "One-time code",
   "uploadAddTag": "Add tag",
   "uploadAnnounceURL": "Announce URL",
