--- a/client/locales/ru.json
+++ b/client/locales/ru.json
@@ -218,6 +218,9 @@
   "torrNo": "Нет",
   "torrGroupTorr": "Сгруппированные торренты",
   "torrThereAreNoOtherTorrGroup": "Других торрентов в этой группе нет.",
+  "torrResults": "результат(а/ов)",
+  "torrPage": "Страница",
+  "torrOf": "из",
   "totp": "Одноразовый код",
   "uploadAddTag": "Добавить метку",
   "uploadAnnounceURL": "Адрес трекера",
