locales: more strings user

--- a/client/locales/en.json
+++ b/client/locales/en.json
@@ -260,6 +260,7 @@
   "userEmailVerified": "Email verified",
   "userRemainingInvites": "Remaining invites",
   "userRatio": "Ratio",
+  "userHitNRuns": "Hit'n'runs",
   "userDownloaded": "Downloaded",
   "userComments": "Comments",
   "userNoComments": "No comments.",
