--- a/client/locales/eo.json
+++ b/client/locales/eo.json
@@ -258,6 +258,7 @@
   "userEmailVerified": "Retpoŝto kontrolita",
   "userRemainingInvites": "Restantaj invitoj",
   "userRatio": "Proporcio",
+  "userHitNRuns": "Ne dividis",
   "userDownloaded": "Elŝutita",
   "userComments": "Komentoj",
   "userNoComments": "Neniu komentoj.",
