--- a/client/locales/ru.json
+++ b/client/locales/ru.json
@@ -256,7 +256,8 @@
   "userInvitedBy": "По приглашению",
   "userEmailVerified": "Эл. почта подтверждена",
   "userRemainingInvites": "Оставшиеся приглашения",
-  "userRatio": "Ratio(соотношение)",
+  "userRatio": "Ратио (соотношение)",
+  "userHitNRuns": "Не поделился",
   "userDownloaded": "Скачано",
   "userComments": "Комментарии",
   "userNoComments": "Комментариев нет.",
