locales: more strings account

--- a/client/locales/en.json
+++ b/client/locales/en.json
@@ -34,6 +34,9 @@
   "accIfYouAreAlsUploaderAcceptTorrent": "if you are als the uploader of the accepted torrent",
   "accInviteLinkCopiedClipboard": "Invite link copied to clipboard",
   "accInvites": "Invites",
+  "accRemaining": "remaining",
+  "accRoleUser": "Role: user",
+  "accRoleAdmin": "Role: admin",
   "accInviteSentSuccess": "Invite sent successfully",
   "accInviteText1": "Enter an email address to send an invite. The invited user will need to sign up with the same email address. Once the invite is generated, you can also copy a direct invite link.",
   "accItemsPurchasedSuccess": "Items purchased successfully",
