--- a/client/locales/eo.json
+++ b/client/locales/eo.json
@@ -34,6 +34,9 @@
   "accIfYouAreAlsUploaderAcceptTorrent": "se vi estas ankaŭ la alŝutanto de la akceptita torento",
   "accInviteLinkCopiedClipboard": "Invita ligilo kopiita al tondujo",
   "accInvites": "Invitoj",
+  "accRemaining": "restanta",
+  "accRoleUser": "Rajtoj: uzanto",
+  "accRoleAdmin": "Rajtoj: administranto",
   "accInviteSentSuccess": "Invito sendita sukcese",
   "accInviteText1": "Entajpu retadreson por sendi inviton. La invitita uzanto devos registriĝi kun la sama retadreso. Post kiam la invito estas generita, vi ankaŭ povas kopii rektan invitligon.",
   "accItemsPurchasedSuccess": "Eroj aĉetitaj sukcese",
