--- a/client/locales/ru.json
+++ b/client/locales/ru.json
@@ -34,6 +34,9 @@
   "accIfYouAreAlsUploaderAcceptTorrent": "если вы также являетесь пользователем торрента",
   "accInviteLinkCopiedClipboard": "Ссылка для приглашения скопирована в буфер обмена",
   "accInvites": "Приглашения",
+  "accRemaining": "осталось",
+  "accRoleUser": "Права: пользователь",
+  "accRoleAdmin": "Права: администратор",
   "accInviteSentSuccess": "Приглашение успешно отправлено",
   "accInviteText1": "Введите адрес эл. почты, чтобы отправить приглашение. Приглашенному пользователю необходимо будет зарегистрироваться, используя тот же адрес эл. почты. После создания приглашения вы также можете скопировать прямую ссылку для приглашения.",
   "accItemsPurchasedSuccess": "Обмен успешно завершен",
