locales: more strings announcement, torrent

--- a/client/locales/en.json
+++ b/client/locales/en.json
@@ -73,6 +73,7 @@
   "annCouldNotUpdateAnnounce": "Could not update announcement",
   "annEditAnnounce": "Edit announcement",
   "annUpdateAnnounce": "Update announcement",
+  "annAnnounce": "Announcement",
   "bmYourBM": "Your bookmarks",
   "bmYouNotHaveAnyBM": "You do not have any bookmarks.",
   "catCategories": "Categories",
@@ -227,6 +228,8 @@
   "torrResults": "results",
   "torrPage": "Page",
   "torrOf": "of",
+  "torrRemovedFrom": "removed from",
+  "torrAddedTo": "added to",
   "totp": "One-time code",
   "uploadAddTag": "Add tag",
   "uploadAnnounceURL": "Announce URL",
