--- a/client/locales/eo.json
+++ b/client/locales/eo.json
@@ -73,6 +73,7 @@
   "annCouldNotUpdateAnnounce": "Ne eblis ĝisdatigi anoncon",
   "annEditAnnounce": "Redakti anoncon",
   "annuUpdateAnnounce": "Ĝisdatigi anoncon",
+  "annAnnounce": "Anonco",
   "bmYourBM": "Viaj legosignoj",
   "bmYouNotHaveAnyBM": "Vi havas neniujn legosignojn.",
   "catCategories": "Kategorioj",
@@ -225,6 +226,8 @@
   "torrResults": "rezultoj",
   "torrPage": "Paĝo",
   "torrOf": "de",
+  "torrRemovedFrom": "forigita de",
+  "torrAddedTo": "aldonita al",
   "totp": "Unufoja kodo",
   "uploadAddTag": "Aldoni etikedon",
   "uploadAnnounceURL": "Anoncu URL",
