--- a/client/locales/ru.json
+++ b/client/locales/ru.json
@@ -73,6 +73,7 @@
   "annCouldNotUpdateAnnounce": "Не удалось обновить анонс",
   "annEditAnnounce": "Изменить анонс",
   "annUpdateAnnounce": "Обновить анонс",
+  "annAnnounce": "Анонс",
   "bmYourBM": "Ваши закладки",
   "bmYouNotHaveAnyBM": "У вас нет закладок.",
   "catCategories": "Категории",
@@ -224,6 +225,8 @@
   "torrResults": "результат(а/ов)",
   "torrPage": "Страница",
   "torrOf": "из",
+  "torrRemovedFrom": "удален из",
+  "torrAddedTo": "добавлен в",
   "totp": "Одноразовый код",
   "uploadAddTag": "Добавить метку",
   "uploadAnnounceURL": "Адрес трекера",
