locales: fix string (ru)

--- a/client/locales/ru.json
+++ b/client/locales/ru.json
@@ -24,7 +24,7 @@
   "accCurrentPass": "Текущий пароль",
   "accDangerZone": "Зона опасности",
   "accDelAccText1": "Вы уверены, что хотите удалить свою учетную запись? Это действие невозможно отменить, и, возможно, вы не сможете зарегистрироваться снова. Ваша личная информация будет удалена, но загруженные вами торренты останутся.",
-  "accDeleteMyAcc": "Удалите мой аккаунт",
+  "accDeleteMyAcc": "Удалить мой аккаунт",
   "accDeleteMyAccYes": "Да, удалить мой аккаунт",
   "accDisable": "Отключить",
   "accEnable": "Включить",
