locales: more strings for upload

--- a/client/locales/en.json
+++ b/client/locales/en.json
@@ -254,6 +254,7 @@
   "uploadTorrentFile": "Torrent file",
   "uploadTorrentUploadSuccess": "Torrent uploaded successfully",
   "uploadUpload": "Upload",
+  "uploadRemove": "Remove",
   "username": "Username",
   "userUser": "User",
   "userSuccessfully": "successfully",
