--- a/client/locales/eo.json
+++ b/client/locales/eo.json
@@ -252,6 +252,7 @@
   "uploadTorrentFile": "Torenta dosiero",
   "uploadTorrentUploadSuccess": "Torento sukcese alŝutita",
   "uploadUpload": "Alŝutu",
+  "uploadRemove": "Forigi",
   "username": "Uzantnomo",
   "userUser": "Uzanto",
   "userSuccessfully": "sukcese",
