--- a/client/locales/ru.json
+++ b/client/locales/ru.json
@@ -251,6 +251,7 @@
   "uploadTorrentFile": "Торрент файл",
   "uploadTorrentUploadSuccess": "Торрент успешно загружен",
   "uploadUpload": "Загрузить",
+  "uploadRemove": "Удалить",
   "username": "Имя",
   "userUser": "Пользователь",
   "userSuccessfully": "успешно",
