locales: more strings annonces, requests, torrent, user

--- a/client/locales/en.json
+++ b/client/locales/en.json
@@ -230,6 +230,7 @@
   "torrOf": "of",
   "torrRemovedFrom": "removed from",
   "torrAddedTo": "added to",
+  "torrTorrNoTags": "This torrent has no tags.",
   "totp": "One-time code",
   "uploadAddTag": "Add tag",
   "uploadAnnounceURL": "Announce URL",
@@ -280,6 +281,7 @@
   "userBan": "ban",
   "userUnbanned": "unbanned",
   "userBanned": "banned",
+  "userAdmin": "Admin",
   "veCouldNotVerifyEmailAddress": "Could not verify email address:",
   "veEmailAddressVerifiedSuccess": "Email address verified successfully.",
   "veNoVerificationTokenProvided": "No verification token provided",
