--- a/client/locales/ru.json
+++ b/client/locales/ru.json
@@ -227,6 +227,7 @@
   "torrOf": "из",
   "torrRemovedFrom": "удален из",
   "torrAddedTo": "добавлен в",
+  "torrTorrNoTags": "Этот торрент не имеет меток.",
   "totp": "Одноразовый код",
   "uploadAddTag": "Добавить метку",
   "uploadAnnounceURL": "Адрес трекера",
@@ -277,6 +278,7 @@
   "userBan": "забанить",
   "userUnbanned": "разбанен",
   "userBanned": "забанен",
+  "userAdmin": "Админ",
   "veCouldNotVerifyEmailAddress": "Не удалось подтвердить адрес эл. почты:",
   "veEmailAddressVerifiedSuccess": "Адрес эл. почты успешно подтвержден.",
   "veNoVerificationTokenProvided": "Токен подтверждения не предоставлен",
