--- a/client/locales/eo.json
+++ b/client/locales/eo.json
@@ -228,6 +228,7 @@
   "torrOf": "de",
   "torrRemovedFrom": "forigita de",
   "torrAddedTo": "aldonita al",
+  "torrTorrNoTags": "Ĉi tiu torento ne havas etikedojn.",
   "totp": "Unufoja kodo",
   "uploadAddTag": "Aldoni etikedon",
   "uploadAnnounceURL": "Anoncu URL",
@@ -278,6 +279,7 @@
   "userBan": "malpermeso",
   "userUnbanned": "nemalpermesita",
   "userBanned": "malpermesita",
+  "userAdmin": "Admin",
   "veCouldNotVerifyEmailAddress": "Ne eblis kontroli retadreson:",
   "veEmailAddressVerifiedSuccess": "Retadreso kontrolita sukcese.",
   "veNoVerificationTokenProvided": "Neniu konfirma ĵetono provizita",
