basic image upload ok in all page. just english ok

--- a/client/locales/en.json
+++ b/client/locales/en.json
@@ -241,6 +241,7 @@
   "uploadCouldNotUploadTorrent": "Could not upload .torrent",
   "uploadDescription": "Description",
   "uploadDragDropClickSelect": "Drag and drop .torrent file here, or click to select",
+  "uploadDragDropClickSelectPoster": "Drag and drop your poster file here, or click to select",
   "uploadDropFileHere": "Drop the file here...",
   "uploadGroupWith": "Group with",
   "uploadGroupWithThisTorrent": "Group with this torrent",
@@ -253,6 +254,7 @@
   "uploadSource": "Source",
   "uploadTags": "Tags",
   "uploadTorrentFile": "Torrent file",
+  "uploadPosterImage" : "Poster file",
   "uploadTorrentUploadSuccess": "Torrent uploaded successfully",
   "uploadUpload": "Upload",
   "uploadRemove": "Remove",
