CamelCase & alphabetical order

--- a/client/locales/de.json
+++ b/client/locales/de.json
@@ -6,6 +6,11 @@
   "username": "Benutzername",
   "usernameRules": "Nur Buchstaben, Zahlen, und “.” erlaubt.",
   "password": "Passwort",
+  "passwordResetRequestSuccess": "Bestätigung versand, falls ein Konto mit dieser E-Mail Adresse existiert",
+  "passwordResetRequestFailed": "Passwort zurücksetzen konnte nicht initiallisiert werden",
+  "passwordResetSuccess": "Passwort wurde erfolgreich zurückgesetzt",
+  "passwordResetFailed": "Passwort wurde nicht erfolgreich zurückgesetzt",
+  "posterImage": "Poster",
   "totp": "Einmalpasswort",
   "resetPassword": "Passwort zurücksetzen",
   "newPassword": "Neues Passwort",
@@ -14,12 +19,7 @@
   "welcome": "Willkommen",
   "registerFailed": "Registrierung fehlgeschlagen",
   "registrationClosed": "Registrierung geschlossen",
-  "passwordResetRequestSuccess": "Bestätigung versand, falls ein Konto mit dieser E-Mail Adresse existiert",
-  "passwordResetRequestFailed": "Passwort zurücksetzen konnte nicht initiallisiert werden",
-  "passwordResetSuccess": "Passwort wurde erfolgreich zurückgesetzt",
-  "passwordResetFailed": "Passwort wurde nicht erfolgreich zurückgesetzt",
   "tokenError": "Token Fehler",
   "uploadPosterImage": "Posterdatei",
-  "PosterImage": "Poster",
   "uploadDragDropClickSelectPoster": "Ziehen Sie Ihre Posterdatei hierher oder klicken Sie, um sie auszuwählen"
 }
