--- a/client/locales/en.json
+++ b/client/locales/en.json
@@ -117,6 +117,7 @@
   "passwordResetRequestFailed": "Could not initiate password reset",
   "passwordResetRequestSuccess": "If an account with that email address exists, you will receive an email shortly",
   "passwordResetSuccess": "Password was reset successfully",
+  "posterImage": "Poster",
   "poweredBy": "Powered by",
   "register": "Register",
   "registerFailed": "Could not register",
@@ -241,6 +242,7 @@
   "uploadCouldNotUploadTorrent": "Could not upload .torrent",
   "uploadDescription": "Description",
   "uploadDragDropClickSelect": "Drag and drop .torrent file here, or click to select",
+  "uploadDragDropClickSelectPoster": "Drag and drop your poster file here, or click to select",
   "uploadDropFileHere": "Drop the file here...",
   "uploadGroupWith": "Group with",
   "uploadGroupWithThisTorrent": "Group with this torrent",
@@ -250,6 +252,7 @@
   "uploadMarkdownSupport": "Markdown supported",
   "uploadMediaInfo": "MediaInfo",
   "uploadName": "Name",
+  "uploadPosterImage": "Poster file",
   "uploadSource": "Source",
   "uploadTags": "Tags",
   "uploadTorrentFile": "Torrent file",
@@ -304,8 +307,5 @@
   "wikiPages": "Pages",
   "wikiSaveChanges": "Save changes",
   "wikiThereNothingHereYet": "There is nothing here yet.",
-  "wikiDelThisPageQ": "Are you sure you want to delete this wiki page? This cannot be undone.",
-  "uploadPosterImage": "Poster file",
-  "PosterImage": "Poster",
-  "uploadDragDropClickSelectPoster": "Drag and drop your poster file here, or click to select"
+  "wikiDelThisPageQ": "Are you sure you want to delete this wiki page? This cannot be undone."
 }
